# ai4h-inspired-fm-benchmark-hub

./: .gitignore  404.html  CREDITS.md  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
benchmarks/: benchmark_template.yaml  bm_ad_classification.yaml  bm_brain_modeling.yaml  bm_cell_annotation.yaml  bm_dna_enhancer.yaml  bm_dna_promoter.yaml  bm_fmri_granular.yaml  bm_report_generation.yaml  bm_robustness.yaml  bm_toy_classification.yaml
configs/: model_brainharmony.yaml  model_brainjepa.yaml  model_brainlm.yaml  model_caduceus.yaml  model_dnabert2.yaml  model_dummy_classifier.yaml  model_evo2.yaml  model_geneformer.yaml  model_hyenadna.yaml  model_medflamingo.yaml  model_openflamingo.yaml  model_swift.yaml  model_titan.yaml  model_uni.yaml
credits/: index.html
data_sources/: index.html
datasets/: adni.yaml  cha_dev_longitudinal.yaml  dna_enhancers_cohn.yaml  dna_nucleotide_transformer.yaml  dna_promoters_nontata.yaml  dna_regulatory_ensembl.yaml  fms_medical_catalog.yaml  gener_tasks.yaml  genomic_benchmarks.yaml  gue_benchmark.yaml  hcp_fmri_tensor.yaml  hg38_reference.yaml  multi_species_corpus.yaml  nucleotide_transformer_tasks.yaml  opengenome2.yaml  pbmc.yaml  refseq_generator.yaml  toy_fmri_classification.yaml  toy_neuro_robustness.yaml  toy_regression.yaml  ukb_fmri_tensor.yaml  ukb_genetics_pgs.yaml  ukb_manifest_stub.yaml  ukb_smri_freesurfer.yaml  ukb_wes.yaml
docs/: data_sources.md  how_it_works.md  index.md  start_here.md
evals/: DNA-enhancers-caduceus-20251219-120012.yaml  DNA-enhancers-evo2-20251219-120013.yaml  DNA-enhancers_cohn-kmer_baseline-20251219-023209.yaml  DNA-promoters-caduceus-20251219-120012.yaml  DNA-promoters-evo2-20251219-120013.yaml  DNA-promoters_nontata-kmer_baseline-20251219-023228.yaml  FMRI-brainjepa-20251219-120049.yaml  (+56 more)
(+165 files in other folders)
