[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmbench"
version = "0.1.0"
description = "AI4H-Inspired Foundation Model Benchmark Hub"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AI4H FM Benchmark Contributors"}
]
keywords = ["benchmark", "foundation-models", "AI4H", "genomics", "neurology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.0.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
models = [
    "torch>=2.2.0",
    "transformers>=4.45.0",
    "huggingface_hub>=0.24.0",
    "sentencepiece>=0.2.0",
]
models = [
    "torch>=2.2.0",
    "transformers>=4.45.0",
    "huggingface_hub>=0.24.0",
    "sentencepiece>=0.2.0",
]

[project.scripts]
fmbench = "fmbench.cli:main"

[project.urls]
Homepage = "https://github.com/allison-eunse/ai4h-inspired-fm-benchmark-hub"
Documentation = "https://allison-eunse.github.io/ai4h-inspired-fm-benchmark-hub"
Repository = "https://github.com/allison-eunse/ai4h-inspired-fm-benchmark-hub"

[tool.setuptools.packages.find]
include = ["fmbench*"]

[tool.ruff]
line-length = 100
target-version = "py39"

